--- a/MVC/public/assets/css/navbar.css
+++ b/MVC/public/assets/css/navbar.css
@@ -8,7 +8,7 @@
   align-items: center;
   position: sticky;
   width: 100%;
-  top: 0px;
+  top: 0;
   z-index: 10;
 }
 .navbar-left {
